// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner styled components StyledActivePath - basic render: StyledSvg has correct fill value 1`] = `
Object {
  "fill": "$theme.colors.primary400",
}
`;

exports[`Spinner styled components StyledSvg - basic render: StyledSvg has correct default styles 1`] = `
Object {
  "animationDuration": "$theme.animation.timing700",
  "animationIterationCount": "infinite",
  "animationName": Object {
    "from": Object {
      "transform": "rotate(0deg)",
    },
    "to": Object {
      "transform": "rotate(360deg)",
    },
  },
  "animationTimingFunction": "linear",
  "color": "currentColor",
  "cursor": "wait",
  "display": "inline-block",
  "fill": "$theme.colors.primary400",
  "height": "$theme.sizing.scale600",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Spinner styled components StyledSvg - custom color: StyledSvg has correct fill value 1`] = `
Object {
  "animationDuration": "$theme.animation.timing700",
  "animationIterationCount": "infinite",
  "animationName": Object {
    "from": Object {
      "transform": "rotate(0deg)",
    },
    "to": Object {
      "transform": "rotate(360deg)",
    },
  },
  "animationTimingFunction": "linear",
  "color": "currentColor",
  "cursor": "wait",
  "display": "inline-block",
  "fill": "$theme.colors.primary400",
  "height": "$theme.sizing.scale600",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Spinner styled components StyledSvg - custom size: StyledSvg has correct height and width styles 1`] = `
Object {
  "animationDuration": "$theme.animation.timing700",
  "animationIterationCount": "infinite",
  "animationName": Object {
    "from": Object {
      "transform": "rotate(0deg)",
    },
    "to": Object {
      "transform": "rotate(360deg)",
    },
  },
  "animationTimingFunction": "linear",
  "color": "currentColor",
  "cursor": "wait",
  "display": "inline-block",
  "fill": "$theme.colors.primary400",
  "height": "$theme.sizing.scale600",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Spinner styled components StyledTrackPath - basic render: StyledSvg has correct fill value 1`] = `
Object {
  "fill": "$theme.colors.mono400",
}
`;
